--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>My Biggest Golf Swing Discovery: "If I knew this years ago I would be on tour"</h3>
                         <div class="channel">SagutoGolf</div>
-                        <div class="date">9 hours ago</div>
+                        <div class="date">10 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -178,7 +178,7 @@
                     <div class="video-info">
                         <h3>Avoid High-Frequency Trading: Best Algo Strategy for Retail #shorts</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">17 hours ago</div>
+                        <div class="date">18 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>4 Reasons Your Backtest Might Be Worthless</h3>
                         <div class="channel">Quantified Strategies</div>
-                        <div class="date">20 hours ago</div>
+                        <div class="date">21 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -1835,9 +1835,9 @@
         
             <div class="video">
                 <a href="https://www.youtube.com/watch?v=oCwDRkSorOg" target="_blank">
-                    <img src="https://i.ytimg.com/vi/oCwDRkSorOg/mqdefault.jpg" alt="JOE MADDON LESSON: "now I drive it 260 and hit my 7-iron 170"">
+                    <img src="https://i.ytimg.com/vi/oCwDRkSorOg/mqdefault.jpg" alt="He Figured Out the Golf Swing! "Now I Drive it 260 and Hit 7-Iron 170"">
                     <div class="video-info">
-                        <h3>JOE MADDON LESSON: "now I drive it 260 and hit my 7-iron 170"</h3>
+                        <h3>He Figured Out the Golf Swing! "Now I Drive it 260 and Hit 7-Iron 170"</h3>
                         <div class="channel">SagutoGolf</div>
                         <div class="date">3 weeks ago</div>
                     </div>
@@ -5107,7 +5107,7 @@
                         <div class="video-info">
                             <h3>Avoid High-Frequency Trading: Best Algo Strategy for Retail #shorts</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">17 hours ago</div>
+                            <div class="date">18 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5118,7 +5118,7 @@
                         <div class="video-info">
                             <h3>4 Reasons Your Backtest Might Be Worthless</h3>
                             <div class="channel">Quantified Strategies</div>
-                            <div class="date">20 hours ago</div>
+                            <div class="date">21 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9405,7 +9405,7 @@
                         <div class="video-info">
                             <h3>My Biggest Golf Swing Discovery: "If I knew this years ago I would be on tour"</h3>
                             <div class="channel">SagutoGolf</div>
-                            <div class="date">9 hours ago</div>
+                            <div class="date">10 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9467,9 +9467,9 @@
             
                 <div class="video">
                     <a href="https://www.youtube.com/watch?v=oCwDRkSorOg" target="_blank">
-                        <img src="https://i.ytimg.com/vi/oCwDRkSorOg/mqdefault.jpg" alt="JOE MADDON LESSON: "now I drive it 260 and hit my 7-iron 170"">
+                        <img src="https://i.ytimg.com/vi/oCwDRkSorOg/mqdefault.jpg" alt="He Figured Out the Golf Swing! "Now I Drive it 260 and Hit 7-Iron 170"">
                         <div class="video-info">
-                            <h3>JOE MADDON LESSON: "now I drive it 260 and hit my 7-iron 170"</h3>
+                            <h3>He Figured Out the Golf Swing! "Now I Drive it 260 and Hit 7-Iron 170"</h3>
                             <div class="channel">SagutoGolf</div>
                             <div class="date">3 weeks ago</div>
                         </div>
