--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>DeMarker Indicator Strategy</h3>
                         <div class="channel">Quantified Strategies</div>
-                        <div class="date">2 minutes ago</div>
+                        <div class="date">30 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - Shedding the Ego</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">46 minutes ago</div>
+                        <div class="date">1 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>Darwinex TV: Performance Coaching - Session 10</h3>
                         <div class="channel">Darwinex</div>
-                        <div class="date">3 hours ago</div>
+                        <div class="date">4 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>There is no need to control you  mind. Your mind needs liberation. | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">3 hours ago</div>
+                        <div class="date">4 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -178,7 +178,7 @@
                     <div class="video-info">
                         <h3>#Throwback Sadhguru Brings Devi to Life on Canvas</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">16 hours ago</div>
+                        <div class="date">17 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>How I Pass Prop Firm Challenges and Get Funded (the5ers)</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">17 hours ago</div>
+                        <div class="date">18 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -288,7 +288,7 @@
                     <div class="video-info">
                         <h3>The first politician on Gary's Economics</h3>
                         <div class="channel">Garys Economics</div>
-                        <div class="date">Yesterday</div>
+                        <div class="date">2 days ago</div>
                     </div>
                 </a>
             </div>
@@ -299,7 +299,7 @@
                     <div class="video-info">
                         <h3>How the Market Tests Traders</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">Yesterday</div>
+                        <div class="date">2 days ago</div>
                     </div>
                 </a>
             </div>
@@ -431,7 +431,7 @@
                     <div class="video-info">
                         <h3>Stubborn trading! The cost of ignoring the market...</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">2 days ago</div>
+                        <div class="date">3 days ago</div>
                     </div>
                 </a>
             </div>
@@ -530,7 +530,7 @@
                     <div class="video-info">
                         <h3>My message to Reform supporters</h3>
                         <div class="channel">Garys Economics</div>
-                        <div class="date">3 days ago</div>
+                        <div class="date">4 days ago</div>
                     </div>
                 </a>
             </div>
@@ -2274,7 +2274,7 @@
                     <div class="video-info">
                         <h3>Is a wealth tax actually possible?</h3>
                         <div class="channel">Garys Economics</div>
-                        <div class="date">4 weeks ago</div>
+                        <div class="date">Aug 31, 2025</div>
                     </div>
                 </a>
             </div>
@@ -5085,7 +5085,7 @@
                         <div class="video-info">
                             <h3>DeMarker Indicator Strategy</h3>
                             <div class="channel">Quantified Strategies</div>
-                            <div class="date">2 minutes ago</div>
+                            <div class="date">30 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -5096,7 +5096,7 @@
                         <div class="video-info">
                             <h3>Darwinex TV: Performance Coaching - Session 10</h3>
                             <div class="channel">Darwinex</div>
-                            <div class="date">3 hours ago</div>
+                            <div class="date">4 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5107,7 +5107,7 @@
                         <div class="video-info">
                             <h3>How I Pass Prop Firm Challenges and Get Funded (the5ers)</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">17 hours ago</div>
+                            <div class="date">18 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5162,7 +5162,7 @@
                         <div class="video-info">
                             <h3>The first politician on Gary's Economics</h3>
                             <div class="channel">Garys Economics</div>
-                            <div class="date">Yesterday</div>
+                            <div class="date">2 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -5173,7 +5173,7 @@
                         <div class="video-info">
                             <h3>How the Market Tests Traders</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">Yesterday</div>
+                            <div class="date">2 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -5195,7 +5195,7 @@
                         <div class="video-info">
                             <h3>Stubborn trading! The cost of ignoring the market...</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">2 days ago</div>
+                            <div class="date">3 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -5239,7 +5239,7 @@
                         <div class="video-info">
                             <h3>My message to Reform supporters</h3>
                             <div class="channel">Garys Economics</div>
-                            <div class="date">3 days ago</div>
+                            <div class="date">4 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -6026,7 +6026,7 @@
                         <div class="video-info">
                             <h3>Is a wealth tax actually possible?</h3>
                             <div class="channel">Garys Economics</div>
-                            <div class="date">4 weeks ago</div>
+                            <div class="date">Aug 31, 2025</div>
                         </div>
                     </a>
                 </div>
@@ -7242,7 +7242,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - Shedding the Ego</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">46 minutes ago</div>
+                            <div class="date">1 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7253,7 +7253,7 @@
                         <div class="video-info">
                             <h3>There is no need to control you  mind. Your mind needs liberation. | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">3 hours ago</div>
+                            <div class="date">4 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7264,7 +7264,7 @@
                         <div class="video-info">
                             <h3>#Throwback Sadhguru Brings Devi to Life on Canvas</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">16 hours ago</div>
+                            <div class="date">17 hours ago</div>
                         </div>
                     </a>
                 </div>
