--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                     <div class="video-info">
                         <h3>DeMarker Indicator Strategy</h3>
                         <div class="channel">Quantified Strategies</div>
-                        <div class="date">8 hours ago</div>
+                        <div class="date">9 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -1401,7 +1401,7 @@
                     <div class="video-info">
                         <h3>Stretching Homemade Mozzarella Just Like Italy! 🧀🇮🇹🔥👨‍🍳 #shorts #cooking #chef</h3>
                         <div class="channel">Julian Sisofo</div>
-                        <div class="date">1 week ago</div>
+                        <div class="date">2 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -5144,7 +5144,7 @@
                         <div class="video-info">
                             <h3>DeMarker Indicator Strategy</h3>
                             <div class="channel">Quantified Strategies</div>
-                            <div class="date">8 hours ago</div>
+                            <div class="date">9 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -8842,7 +8842,7 @@
                         <div class="video-info">
                             <h3>Stretching Homemade Mozzarella Just Like Italy! 🧀🇮🇹🔥👨‍🍳 #shorts #cooking #chef</h3>
                             <div class="channel">Julian Sisofo</div>
-                            <div class="date">1 week ago</div>
+                            <div class="date">2 weeks ago</div>
                         </div>
                     </a>
                 </div>
