--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                     <div class="video-info">
                         <h3>DeMarker Indicator Strategy</h3>
                         <div class="channel">Quantified Strategies</div>
-                        <div class="date">10 hours ago</div>
+                        <div class="date">11 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -653,7 +653,7 @@
                     <div class="video-info">
                         <h3>SIDEMEN GUESS THE IMPOSTOR: YOUTUBER EDITION</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">4 days ago</div>
+                        <div class="date">5 days ago</div>
                     </div>
                 </a>
             </div>
@@ -851,7 +851,7 @@
                     <div class="video-info">
                         <h3>SIDEMEN AVOID THE BOMB</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">6 days ago</div>
+                        <div class="date">1 week ago</div>
                     </div>
                 </a>
             </div>
@@ -5144,7 +5144,7 @@
                         <div class="video-info">
                             <h3>DeMarker Indicator Strategy</h3>
                             <div class="channel">Quantified Strategies</div>
-                            <div class="date">10 hours ago</div>
+                            <div class="date">11 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9602,7 +9602,7 @@
                         <div class="video-info">
                             <h3>SIDEMEN GUESS THE IMPOSTOR: YOUTUBER EDITION</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">4 days ago</div>
+                            <div class="date">5 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -9635,7 +9635,7 @@
                         <div class="video-info">
                             <h3>SIDEMEN AVOID THE BOMB</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">6 days ago</div>
+                            <div class="date">1 week ago</div>
                         </div>
                     </a>
                 </div>
