--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                     <div class="video-info">
                         <h3>How social media fuels useless products</h3>
                         <div class="channel">Matt D'Avella</div>
-                        <div class="date">13 hours ago</div>
+                        <div class="date">14 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -246,7 +246,7 @@
                     <div class="video-info">
                         <h3>Candlestick Pattern Is Not Enough, Here's Why...</h3>
                         <div class="channel">Rayner Teo</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -862,7 +862,7 @@
                     <div class="video-info">
                         <h3>Do More Without Stressing Out | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">6 days ago</div>
+                        <div class="date">1 week ago</div>
                     </div>
                 </a>
             </div>
@@ -1412,7 +1412,7 @@
                     <div class="video-info">
                         <h3>Trading Gives You Hope. Here's Why...</h3>
                         <div class="channel">Rayner Teo</div>
-                        <div class="date">1 week ago</div>
+                        <div class="date">2 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -2197,7 +2197,7 @@
                     <div class="video-info">
                         <h3>You don't need to predict to profit, here's why...</h3>
                         <div class="channel">Rayner Teo</div>
-                        <div class="date">3 weeks ago</div>
+                        <div class="date">4 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -5144,7 +5144,7 @@
                         <div class="video-info">
                             <h3>Candlestick Pattern Is Not Enough, Here's Why...</h3>
                             <div class="channel">Rayner Teo</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
@@ -5661,7 +5661,7 @@
                         <div class="video-info">
                             <h3>Trading Gives You Hope. Here's Why...</h3>
                             <div class="channel">Rayner Teo</div>
-                            <div class="date">1 week ago</div>
+                            <div class="date">2 weeks ago</div>
                         </div>
                     </a>
                 </div>
@@ -6017,7 +6017,7 @@
                         <div class="video-info">
                             <h3>You don't need to predict to profit, here's why...</h3>
                             <div class="channel">Rayner Teo</div>
-                            <div class="date">3 weeks ago</div>
+                            <div class="date">4 weeks ago</div>
                         </div>
                     </a>
                 </div>
@@ -7543,7 +7543,7 @@
                         <div class="video-info">
                             <h3>Do More Without Stressing Out | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">6 days ago</div>
+                            <div class="date">1 week ago</div>
                         </div>
                     </a>
                 </div>
@@ -8242,7 +8242,7 @@
                         <div class="video-info">
                             <h3>How social media fuels useless products</h3>
                             <div class="channel">Matt D'Avella</div>
-                            <div class="date">13 hours ago</div>
+                            <div class="date">14 hours ago</div>
                         </div>
                     </a>
                 </div>
